// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableSection renders correctly 1`] = `
<div
  data-testid="lyzer-table-section"
>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-12 flex-grid-col-lg-12 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <h3
        class="lyzer-card-body"
      >
        <div
          class="lyzer-card-section"
        >
          <h3
            class="lyzer-card-section-title"
          >
            Max Verstappen
          </h3>
          <p
            class="lyzer-card-section-subtitle"
          >
            Previous Race Winner
          </p>
          <hr
            class="lyzer-card-section-divider"
          />
        </div>
        <div
          class="lyzer-card-section"
        >
          <h3
            class="lyzer-card-section-title"
          >
            Qatar
          </h3>
          <p
            class="lyzer-card-section-subtitle"
          >
            Previous Grand Prix
          </p>
          <hr
            class="lyzer-card-section-divider"
          />
        </div>
        <div
          class="lyzer-card-section"
        >
          <h3
            class="lyzer-card-section-title"
          >
            12 of 24 races
          </h3>
          <p
            class="lyzer-card-section-subtitle"
          >
            Season Progress
          </p>
          <hr
            class="lyzer-card-section-divider"
          />
        </div>
      </h3>
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-12 flex-grid-col-lg-12 flex-grid-col-xl-9 flex-grid-col-xxl-9"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Constructor Standings
      </span>
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-12 flex-grid-col-lg-12 flex-grid-col-xl-12 flex-grid-col-xxl-12"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Driver Standings
      </span>
    </div>
  </div>
</div>
`;

exports[`TableSection renders loading state correctly 1`] = `
<div
  data-testid="lyzer-table-section"
>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-12 flex-grid-col-lg-12 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <h3
        class="lyzer-card-body"
      >
        <div
          class="lyzer-card-section"
        >
          <h3
            class="lyzer-card-section-title"
          >
            Loading...
          </h3>
          <p
            class="lyzer-card-section-subtitle"
          >
            Previous Race Winner
          </p>
          <hr
            class="lyzer-card-section-divider"
          />
        </div>
        <div
          class="lyzer-card-section"
        >
          <h3
            class="lyzer-card-section-title"
          >
            Loading...
          </h3>
          <p
            class="lyzer-card-section-subtitle"
          >
            Previous Grand Prix
          </p>
          <hr
            class="lyzer-card-section-divider"
          />
        </div>
        <div
          class="lyzer-card-section"
        >
          <h3
            class="lyzer-card-section-title"
          >
            Loading...
          </h3>
          <p
            class="lyzer-card-section-subtitle"
          >
            Season Progress
          </p>
          <hr
            class="lyzer-card-section-divider"
          />
        </div>
      </h3>
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-12 flex-grid-col-lg-12 flex-grid-col-xl-9 flex-grid-col-xxl-9"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Constructor Standings
      </span>
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-12 flex-grid-col-lg-12 flex-grid-col-xl-12 flex-grid-col-xxl-12"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Driver Standings
      </span>
    </div>
  </div>
</div>
`;
